<resources>
    <string name="app_name">starbucs</string>
    <string name="add_to_order">Add to Order</string>
    <string name="details">Details</string>
    <string name="plus">+</string>
    <string name="cups_number">1</string>
    <string name="minus">-</string>
    <string name="_30_00">$30.00</string>
    <string name="drink_name">Caramel\nFrappuccino</string>
    <string name="size_options">Size Options</string>
    <string name="best_sales">Best Sales</string>
    <string name="tall">Tall</string>
    <string name="Grande">Grande</string>
    <string name="venti">Venti</string>
    <string name="custom">Custom</string>
    <string name="_16_fi_oz">16 FI Oz</string>
    <string name="_12_fi_oz">12 FI Oz</string>
    <string name="fi_oz">__ FI Oz</string>
</resources>